[tool.poetry]
name = "comments-management-system-docs"
version = "0.1.0"
description = ""
authors = ["elpapi42 <whitman-2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
